# pattern-folds

./: README.md  pattern-folds.cabal
src/: CaseMatch.hs  PatternFolds.hs  RecordCase.hs
src/Data/Functor/Rep/: Handler.hs
src/Data/Functor/Rep/Handler/: TH.hs
src/PatternFolds/: TH.hs
src/RecordCase/: TH.hs
