name:                pattern-folds
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/pattern-folds#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PatternFolds
                     , PatternFolds.TH
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.15
                     , template-haskell >= 2.11
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite pattern-folds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pattern-folds
                     , QuickCheck >= 2.8
                     , doctest >= 0.11
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/pattern-folds
